# finance-system

./: .gitignore  LICENSE  README.md  or项目财务系统frontend  release.json  update.json  upload_result.txt  发布.ps1  发布更新指南.md
backend/: check_db.py  cleanup_endpoints.py  ensure_imports.py  fix_syntax.py  init_db.py  insert_demo.py  main.py  pyproject.toml  repair_files.py  requirements.txt  reset_admin.py  run_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v3/: __init__.py  api.py
backend/app/api/api_v3/endpoints/: __init__.py  (+18 more)
backend/app/core/: config.py  deps.py  logging_config.py
backend/app/db/: __init__.py  init_db.py  migrations.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/models/v3/: __init__.py  account_balance.py  audit_log.py  business_order.py  category.py  deduction_formula.py  entity.py  order_flow.py  order_item.py  payment_method.py  payment_record.py  product.py  product_spec.py  role.py  specification.py  stock.py  stock_batch.py  unit.py  vehicle.py
backend/app/schemas/: user.py
backend/app/schemas/v3/: __init__.py  account_balance.py  audit_log.py  business_order.py  category.py  deduction_formula.py  entity.py  payment_method.py  payment_record.py  product.py  product_spec.py  role.py  specification.py  statistics.py  stock.py  stock_batch.py  unit.py  vehicle.py
backend/app/scripts/migrations/: add_initial_balance_field.py  add_logistics_fields.py
backend/app/services/: scheduler.py
backend/migrations/: unit_reform.sql
backend/scripts/: clear_demo_data.py  init_demo_data.py
(+105 files in other folders)
